# AI-BootCamp

./: README.md
ML00/ex00/: matrix.py
ML00/ex01/: TinyStatistician.py
PYTHON00/ex00/: answers.txt  requirements.txt
PYTHON00/ex01/: exec.py
PYTHON00/ex02/: whois.py
PYTHON00/ex03/: count.py
PYTHON00/ex04/: operations.py
PYTHON00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
PYTHON00/ex06/: recipe.py
PYTHON00/ex07/: filterwords.py
PYTHON00/ex08/: sos.py
PYTHON00/ex09/: guess.py
PYTHON00/ex10/: loading.py
PYTHON01/ex00/: book.py  recipe.py  test.py
PYTHON01/ex01/: game.py
PYTHON01/ex02/: test.py  vector.py
PYTHON01/ex03/: generator.py
PYTHON01/ex04/: eval.py
PYTHON01/ex05/: banking_test3.py  the_bank.py
PYTHON02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
PYTHON02/ex01/: main.py
PYTHON02/ex02/: logger.py
PYTHON02/ex03/: csvreader.py  good_test.py  test.py
PYTHON02/ex04/: README.md  build.sh  setup.cfg
PYTHON02/ex04/src/my_minipack/: logger.py  progress.py
PYTHON02/ex04/tests/: loading_test.py  logger_test.py
PYTHON02/ex05/: TinyStatistician.py
PYTHON03/ex00/: NumPyCreator.py
PYTHON03/ex01/: ImageProcessor.py
PYTHON03/ex02/: ScrapBooker.py  test.py
PYTHON03/ex03/: ColorFilter.py  ImageProcessor.py  test.py
PYTHON03/ex04/: Kmeans.py
PYTHON04/ex00/: FileLoader.py  test.py
PYTHON04/ex01/: FileLoader.py  YoungestFellah.py  test.py
PYTHON04/ex02/: FileLoader.py  ProportionBySport.py  test.py
PYTHON04/ex03/: FileLoader.py  HowManyMedals.py  test.py
PYTHON04/ex04/: FileLoader.py  test.py  (+1 more)
(+5 files in other folders)
