[metadata]
name = my_minipack
version = 1.0.0
author = wluong
author_email = wluong@student.42.fr
description = How to create a package in python.
license = GPLv3
long_description = file: README.md
url = None
classifiers =
	Development Status :: 3 - Alpha,
	Intended Audience :: Developers,
	Intended Audience :: Students,
	Topic :: Education,
	Topic :: HowTo,
	Topic :: Package,
	License :: OSI Approved :: : GNU General Public License v3 (GPLv3),
	Programming Language :: Python :: 3,
	Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src